--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: media_social_share
-description: A new Flutter package project.
-version: 0.0.1
+description: Compartilhamento de forma nativa e em todas as redes sociais.
+version: 0.0.2
 author: Gabriel Rocha
 homepage: https://github.com/gabrielscr/media_social_share.git
 
