--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: media_social_share
 description: Compartilhamento de forma nativa e em todas as redes sociais.
-version: 0.0.3
+version: 0.0.4
 author: Gabriel Rocha
 homepage: https://github.com/gabrielscr/media_social_share.git
 
@@ -17,3 +17,11 @@ dev_dependencies:
     sdk: flutter
     
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: com.grochatechnologies.media_social_share
+        pluginClass: MediaSocialSharePlugin
+      ios:
+        package: com.grochatechnologies.media_social_share
+        pluginClass: MediaSocialSharePlugin
