--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,3 @@
-<manifest package="com.grochatechnologies.media_social_share">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.grochatechnologies.media_social_share">
 </manifest>
